<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--<android.support.design.widget.NavigationView-->
    <!--android:id="@+id/nav_view"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_gravity="start"-->
    <!--android:fitsSystemWindows="true"-->
    <!--app:headerLayout="@layout/nav_header_main"-->
    <!--app:menu="@menu/activity_main_drawer" />-->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <!--<include-->
        <!--layout="@layout/drawer_list_layout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->

        <LinearLayout
            style="@style/AppDrawerStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical">

            <!--UserInterface-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/vesnaRED">

                <ImageView
                    android:id="@+id/navHeaderImg"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/logo_zgoraj_red"
                    android:onClick="navigationViewHomeClick"/>

                <TextView
                    android:id="@+id/navHeaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Test"
                    android:textAllCaps="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--Category Section-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:onClick="navigationViewMapClick"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/navCont_map"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_map"
                            android:textColor="@color/darkGrey" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ikona_zemljevid" />

                    </LinearLayout>

                    <include
                        layout="@layout/data_decoration_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:onClick="navigationViewLocationClick"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/navCont_loc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_loc"
                            android:textColor="@color/darkGrey" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ikona_lokacije" />

                    </LinearLayout>

                    <include
                        layout="@layout/data_decoration_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:onClick="navigationViewMyLocationClick"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/navCont_my_loc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_weight="1"
                            android:text="@string/menu_my_loc"
                            android:textColor="@color/darkGrey" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ikona_moje_lokacije" />

                    </LinearLayout>

                    <include
                        layout="@layout/data_decoration_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:onClick="navigationViewPathClick"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/navCont_path"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_path"
                            android:textColor="@color/darkGrey" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ikona_pot" />

                    </LinearLayout>

                    <include
                        layout="@layout/data_decoration_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:onClick="navigationViewMyPathClick"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/navCont_my_path"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_weight="1"
                            android:text="@string/menu_my_path"
                            android:textColor="@color/darkGrey" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ikona_moje_poti" />

                    </LinearLayout>

                    <include
                        layout="@layout/data_decoration_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:onClick="navigationViewSearchClick"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/navCont_search"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_search"
                            android:textColor="@color/darkGrey" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ikona_iskanje" />

                    </LinearLayout>

                    <include
                        layout="@layout/data_decoration_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:onClick="navigationViewAddClick"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/navCont_addNew"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_add_new"
                            android:textColor="@color/darkGrey" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ikona_dodaj_novo" />

                    </LinearLayout>

                    <include
                        layout="@layout/data_decoration_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:onClick="navigationViewWhatsNewClick"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/navCont_howTo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_how_to"
                            android:textColor="@color/darkGrey" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ikona_predstavitev" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:onClick="navigationViewLogingClick"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/navCont_loging"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_loging"
                            android:textColor="@color/darkGrey" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ikona_predstavitev" />

                    </LinearLayout>

                    <include
                        layout="@layout/data_decoration_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
